WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314898
shrink-to-fit boxes do not update their width when they gain or lose a scrollbar
https://bugs.webkit.org/show_bug.cgi?id=314898
Summary
shrink-to-fit boxes do not update their width when they gain or lose a scrollbar
Sammy Gill
Reported
2026-05-15 09:32:31 PDT
In the attached testcase we should see a 20px wide rectangle but the scrollbar ends up shrinking the space for that content.
Attachments
Testcase
(219 bytes, text/html)
2026-05-15 09:32 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2026-05-15 09:32:54 PDT
Created
attachment 479679
[details]
Testcase
Radar WebKit Bug Importer
Comment 2
2026-05-15 09:33:56 PDT
<
rdar://problem/177172896
>
Sammy Gill
Comment 3
2026-05-15 10:05:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64814
Alexey Proskuryakov
Comment 4
2026-05-15 17:55:16 PDT
***
Bug 314897
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2026-05-17 21:51:05 PDT
Committed
313390@main
(999b6ea5d83a): <
https://commits.webkit.org/313390@main
> Reviewed commits have been landed. Closing PR #64814 and removing active labels.
Sammy Gill
Comment 6
2026-05-21 10:36:25 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60077
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug