Source/WebCore/rendering/RelayoutScopeForScrollbarChange.cpp
@@ -60,10 +60,8 @@ RelayoutScopeForScrollbarChange::~RelayoutScopeForScrollbarChange()
                 subtreeScrollbarChangesState->renderersWithScrollbarChange.add(m_renderBlock);
                 return;
             }
-            m_renderBlock->setNeedsLayout(MarkingBehavior::MarkOnlyThis);
-            auto scope = LayoutScope { m_renderBlock.get(), InOverflowRelayout::Yes };
             m_renderBlock->scrollbarsChanged(scrollbarChanges.contains(ScrollbarChange::AutoHorizontalScrollbarChanged), scrollbarChanges.contains(ScrollbarChange::AutoVerticalScrollBarChanged));
-            m_renderBlock->layoutBlock(RelayoutChildren::Yes);
+            RenderBlock::relayoutRenderBlockForScrollbarChange(m_renderBlock.get());
         }
     }
 
